# gfxinfo

./: Cargo.toml  README.md
.github/workflows/: build.yml  format.yml  publish.yml
examples/: basic.rs  usage.rs
src/: amd.rs  intel.rs  lib.rs  nvidia.rs
src/linux/: intel.rs  mod.rs  nvidia.rs
src/macos/: mod.rs
src/util/: pci.rs
src/windows/: mod.rs
