[package]
name = "gpuinfo"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_os = "linux")'.dependencies]
libdrm_amdgpu_sys = { version = "0.8.4", optional = true }
nvml-wrapper = { version = "0.10.0", optional = true }

[features]
default = ["amd", "nvidia", "intel", "gpu_info"]
amd = ["dep:libdrm_amdgpu_sys"]
nvidia = ["dep:nvml-wrapper"]
intel = []
gpu_info = []
